tests/types_first_opaque_types_cycle/types_first_opaque_types_cycle.exp
Error --------------------------------------------------------------------------------------------------------- a.js:5:2

Cannot cast `x` to number because `O` [1] is incompatible with number [2]. [incompatible-cast]

   a.js:5:2
   5| (x: number); // error O ~> number
       ^

References:
   a.js:4:16
   4| declare var x: O;
                     ^ [1]
   a.js:5:5
   5| (x: number); // error O ~> number
          ^^^^^^ [2]



Found 1 error
